from . import HasTwoUsersRepo
from ..model.match import Match
from sqlalchemy import select, ScalarResult, Row, RowMapping

from ..model.user import User
from ...errors import SameValueError, MatchAlreadyConfirmedError


class MatchRepo(HasTwoUsersRepo[Match]):

    def __init__(self, session):
        super().__init__(session, Match)


    async def get_by_user_id(self, user_id: str) -> list[Match] | None:
        stmt = (
            select(Match).where((Match.user1_id == user_id) | (Match.user2_id == user_id))
        )

        results = await self.session.scalars(stmt)

        return list(results.all())

    async def match(self, me: User, to_match: User) -> Match:
        if me.id == to_match.id:
            raise SameValueError('Cannot match yourself')


        match_repo = MatchRepo(session=self.session)

        match = await match_repo.get_by_both_user_ids(me.id, to_match.id, for_update=True)

        if match:
            if match.confirmed:
                raise MatchAlreadyConfirmedError("Match already confirmed")

            match.confirmed = True
            return await match_repo.save(match)

        mach = Match()
        if me.id < to_match.id:
            mach.user1_id = me.id
            mach.user2_id = to_match.id
        else:
            mach.user1_id = to_match.id
            mach.user2_id = me.id

        return await match_repo.save(mach)




